<resources>
    <string name="app_name">FoodSave</string>
    <string name="action_logout">Log Out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="signUp">Sign Up</string>
    <string name="signIn">Login</string>
    <string name="next">Login</string>
    <string name="previous">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="not_register">Already Registered? Login!</string>
    <string name="register">Register</string>
    <string name="expiry_date">Expiry</string>

    <string name="lorem_ipsum">
        Welcome to Food Save!
    </string>
    <string name="Donate">Donate</string>
    <string name="shr_product_description">Description\n</string>
    <string name="Receive">Receive</string>
    <string name="Food_Map">Food Map</string>
    <string name="Rewards">Rewards</string>
    <string name="About_Us">About Us</string>

    <string name="Contact_Us">Contact Us</string>
    <string name="dashboard">Dashboard</string>
    <string name="Feedback">Feedback on Donor</string>
    <string name="donor_name">Donor Name</string>
    <string name="food_name">Food Items</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>

    <string name="your_text_here">Welcome to our food service app!
        Our mission is simple: tackling food waste through cutting-edge technology and sustainable practices.
        We believe that every meal matters, and by leveraging innovation, we can make a significant impact.</string>
    <string name="our_aim_Text_View">Aim:</string>
    <string name="aim">
        Empowering Businesses: We partner with restaurants, grocery stores, and food suppliers to minimize food waste. Our technology streamlines inventory management, reduces overstocking, and ensures that surplus food finds its way to those who need it.
        \n\nMaximizing Resources: We’re committed to maximizing the use of available resources. Whether it’s surplus ingredients, imperfect produce, or excess meals, we connect them to consumers, minimizing waste and promoting responsible consumption.
        \n\nCircular Economy: Our team combines expertise in circular economy management. From farm to fork, we optimize the entire food supply chain, ensuring that food is utilized efficiently for the benefit of all.
    </string>
    <string name="choose">Why Choose Us?</string>
    <string name="why_choose_us">
        User-Friendly Experience: Our app is designed with you in mind. Easy navigation, intuitive menus, and a seamless ordering process make your food journey delightful.
        \n\n Community Impact: By using our app, you contribute to a greener, more sustainable future. Every order matters, and together, we can reduce food waste one meal at a time.
    </string>
    <string name="common">Join us in this delicious revolution! Together, let’s make a difference.</string>

    <string name="_1_999_999_9999">+1 (999) 999 - 9999</string>
    <string name="phone">Phone:</string>
    <string name="foodsave_gmail_com">foodsave@gmail.com</string>
    <string name="email">Email:</string>
    <string name="one_pace_plaza_new_york_ny_10038">One Pace Plaza,\nNew York, NY 10038</string>
    <string name="address">Address:</string>

    <string name="timings">Timings:</string>
    <string name="mon_fri_9am_to_6pm">Mon - Fri: 9AM to 6PM</string>
    <string name="connect_with_us_on">Connect with us on:</string>
    <string name="ouraimTextView">aim</string>>


    <string name="choose_from_below">Choose from below</string>
    <string-array name="donor_ratings">
            <item>Choose from below</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
    </string-array>

    <string-array name="food_quality_ratings">
        <item>Choose from below</item>
        <item>Not Good</item>
        <item>Satisfactory</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>

    <string name="points">POINTS</string>
    <string name="redeem">REDEEM!</string>
    <string name="number">123</string>
    <string name="badges">BADGES</string>
    <string name="nextButton">Next Badge</string>

</resources>