<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignUp">

    <fragment
        android:id="@+id/SignUp"
        android:name="com.example.foodsave.SignUp"
        android:label="@string/signUp"
        tools:layout="@layout/sign_up">

        <action
            android:id="@+id/action_SignUp_to_SignIn"
            app:destination="@id/SignIn" />
    </fragment>

    <fragment
        android:id="@+id/SignIn"
        android:name="com.example.foodsave.Login"
        android:label="@string/signIn"
        tools:layout="@layout/login_screen">

        <action
            android:id="@+id/action_SignIn_to_Dashboard"
            app:destination="@id/Dashboard" />

    </fragment>

    <fragment
        android:id="@+id/Dashboard"
        android:name="com.example.foodsave.Dashboard"
        android:label="@string/dashboard"
        tools:layout="@layout/dashboard">
        <action
            android:id="@+id/action_Dashboard_to_Donate"
            app:destination="@id/Donate" />
        <action
            android:id="@+id/action_Dashboard_to_Receive"
            app:destination="@id/Receive" />
        <action
            android:id="@+id/action_Dashboard_to_Rewards"
            app:destination="@id/Rewards" />
    </fragment>

    <fragment
        android:id="@+id/Donate"
        android:name="com.example.foodsave.Donate"
        android:label="@string/Donate"
        tools:layout="@layout/donate_screen">
        <action
            android:id="@+id/action_Donate_to_Dashboard"
            app:destination="@id/Dashboard" />
    </fragment>

    <fragment
        android:id="@+id/Receive"
        android:name="com.example.foodsave.Receive"
        android:label="@string/Receive"
        tools:layout="@layout/donate_screen">
    </fragment>

    <fragment
        android:id="@+id/Rewards"
        android:name="com.example.foodsave.Receive"
        android:label="@string/Rewards"
        tools:layout="@layout/rewards">
    </fragment>

</navigation>