<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Rewards">


    <TextView
        android:id="@+id/pointsText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="38sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/numberDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pointsText"
        app:layout_constraintEnd_toEndOf="@id/pointsText"
        app:layout_constraintTop_toBottomOf="@id/pointsText"/>


    <Button
        android:id="@+id/redeemButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/redeem"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/redeem"
        app:layout_constraintTop_toBottomOf="@id/numberDisplay"
        app:layout_constraintStart_toStartOf="@id/numberDisplay"
        app:layout_constraintEnd_toEndOf="@id/numberDisplay" />


    <TextView
        android:id="@+id/badgesText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/badges"
        android:textSize="38sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="@id/redeemButton"
        app:layout_constraintStart_toStartOf="@id/redeemButton"
        app:layout_constraintEnd_toEndOf="@id/redeemButton" />

    <ImageSwitcher
        android:id="@+id/badgeImage_switcher"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/badgesText"
        app:layout_constraintStart_toStartOf="@id/badgesText"
        app:layout_constraintEnd_toEndOf="@id/badgesText"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/nextBadgeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:backgroundTint="@color/dashboard_buttons"
        app:layout_constraintTop_toBottomOf="@id/badgeImage_switcher"
        app:layout_constraintStart_toStartOf="@id/badgeImage_switcher"
        app:layout_constraintEnd_toEndOf="@id/badgeImage_switcher" />


</androidx.constraintlayout.widget.ConstraintLayout>
