<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Contact_Us">


    <!-- Contact Information -->
    <TextView
        android:id="@+id/contactTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="80dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactTextView" />

    <TextView
        android:id="@+id/PaceaddressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/one_pace_plaza_nnew_york_ny_10038"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactTextView"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTextView" />

    <TextView
        android:id="@+id/gmailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/n_foodsave_gmail_com"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTextView"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />


    <TextView
        android:id="@+id/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/_1_999_999_9999"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/timingTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/timings"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/timingsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/mon_fri_9am_to_6pm"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/connectTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/connect_with_us_on"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timingsTextView"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/facebookIcon"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:onClick="openFacebookUrl"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timingsTextView" />

    <ImageView
        android:id="@+id/instagramIcon"
        android:layout_width="48dp"
        android:layout_height="64dp"
        android:layout_marginTop="104dp"
        android:onClick="openInstagramUrl"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timingsTextView" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="49dp"
        android:layout_height="64dp"
        android:layout_marginTop="104dp"
        android:onClick="openTwitterUrl"
        android:src="@drawable/twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timingsTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>