<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="8dp"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/background2"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="128dp"
            android:layout_height="106dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:src="@drawable/add"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="@string/register"
            android:backgroundTint="@color/register"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/not_register"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>


</LinearLayout>
